# DGIIM

./: README.md
Primero/Primer Cuatrimestre/Tecnología y Organización de Computadores/Exámenes Resueltos/: Enlace Wuolah Exámenes.txt
Primero/Segundo Cuatrimestre/Estadística Descriptiva e Introducción a la Probabilidad/Apuntes/: Anexo (Combinatoria)
Primero/Segundo Cuatrimestre/Fundamentos del Software/Entregas/Teoría/: 3. Ejercicios previos Tema 3.odt
Primero/Segundo Cuatrimestre/Metodología de la Programación/Exámenes/2021/: Solución Final Ordinaria.txt
Primero/Segundo Cuatrimestre/Metodología de la Programación/Exámenes/Antes del 2020/: Julio 2020 (Código disponible en el examen).tgz  Julio 2020 (Solución).tgz  Junio 2020 (Código disponible en el examen).tgz  Junio 2020 (Solución).tgz
Primero/Segundo Cuatrimestre/Métodos Numéricos I/Exámenes/2021 Prácticas/: Examen Máxima (Temas 1 y 2).wxmx  Examen Máxima (Temas 3 y 4).wxmx
Primero/Segundo Cuatrimestre/Métodos Numéricos I/Prácticas con Máxima/Soluciones/: Ejercicios Práctica 1.wxmx  Ejercicios Práctica 2.wxmx  Ejercicios Práctica 3.wxmx  Ejercicios Práctica 4.wxmx
Primero/Segundo Cuatrimestre/Métodos Numéricos I/Relaciones/Anexos Máxima/: Relación 2.wxmx  Relación 3.wxmx  Relación 4.wxmx
Segundo/Primer Cuatrimestre/Estructura de Computadores/Prácticas/Práctica 2/: ej2.sh  ej3.sh  ej4.sh  ej5.sh  media  media.s  media64  media64.s  salidas.txt  suma  suma.s  suma2  suma2.s  suma3  suma3.s
Segundo/Primer Cuatrimestre/Estructura de Computadores/Prácticas/Práctica 3/: analisis_eficiencia.ods  popcount  popcount.c  salidas.txt  salidas_tests.txt  scriptEficiencia.sh  scriptTests.sh
Segundo/Primer Cuatrimestre/Estructura de Computadores/Prácticas/Práctica 4/: JAHC_BOMBA_2021  JAHC_BOMBA_2021.c
Segundo/Primer Cuatrimestre/Estructura de Computadores/Prácticas/Práctica 5/: line  line.cc  makefile  size  size.cc
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/: CMakeLists.txt  Doxyfile.in  juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/estudiante/doc/: eficiencia.dox  mainpage.dox
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/estudiante/include/: image.h  imageIO.h
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/estudiante/src/: barajar.cpp  contraste.cpp  icono.cpp  image.cpp  imageIO.cpp  imageop.cpp  negativo.cpp  subimagen.cpp  zoom.cpp
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/expected/: contraste_pub.pgm  negativo_pub.pgm  zoom_pub.pgm
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/img/: board.pgm  cameraman.pgm  shuffle_9973.pgm  vacas.pgm
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica2_imagenes/results/: contraste_pub.pgm  icono_pub.pgm  original_9973.pgm  subimagen_pub.pgm
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/: CMakeLists.txt  Doxyfile.in  juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/__MACOSX/: ._estudiante
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/__MACOSX/estudiante/doc/: ._mainpage.dox
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/estudiante/doc/: mainpage.dox
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/estudiante/include/: maxqueue.h  maxstack.h
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica3-colas_y_pilas/estudiante/src/: cola_max.cpp  ejemplo_stl.cpp  maxqueue.cpp  maxstack.cpp  pila_max.cpp
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/: CMakeLists.txt  Doxyfile.in  juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/__MACOSX/: ._estudiante  ._juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/estudiante/data/: diccionario.txt
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/estudiante/doc/: mainpage.dox
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/estudiante/include/: bag.h  dictionary.h  letters_bag.h  letters_set.h
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica4-tdas_letras/estudiante/src/: bolsa.cpp  bolsa_letras.cpp  cantidad_letras.cpp  conjunto_letras.cpp  dictionary.cpp  letters_bag.cpp  letters_set.cpp  palabras_longitud.cpp
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica5-solver/: CMakeLists.txt  Doxyfile.in  juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica5-solver/__MACOSX/: ._juez.sh
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica5-solver/__MACOSX/estudiante/include/: ._solver.h
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica5-solver/data/: diccionario.txt
Segundo/Primer Cuatrimestre/Estructura de Datos/Prácticas/Soluciones/practica5-solver/estudiante/include/: solver.h
Segundo/Primer Cuatrimestre/Estructura de Datos/Retos/reto3 solución/: ej19.cpp  ej20.cpp  ej24.cpp  ej27.cpp  ej29.cpp
Segundo/Primer Cuatrimestre/Sistemas Operativos/Prácticas/Apuntes/: COSAS_IMPORTANTES_SO_PRACTICAS.txt
Segundo/Primer Cuatrimestre/Sistemas Operativos/Prácticas/Códigos auxiliares para examen/: Códigos auxiliares.c  cauce.c  comprobacion_args.c  hijo.c  main.c  open_recdir.c  openfile.c
Segundo/Segundo Cuatrimestre/Arquitectura de Computadores/Actividad Extra OpenMP Coprocesadores/: Extra_Cuaderno_OpenMPcoprocesadores.docx  Extra_Cuaderno_OpenMPcoprocesadores.odt
Segundo/Segundo Cuatrimestre/Arquitectura de Computadores/Actividad Extra OpenMP Coprocesadores/codigos/: daxpbyz32_ompoff.c  daxpbyz32_ompoff2.c  (+5 more)
(+1200 files in other folders)
